hphp/hack/test/typecheck/reactive/mayberx1.php
<?hh // strict

// ERROR, __MaybeRx can only appear on parameters of
// conditionally reactive functions
<<__MaybeRx>>
class A {
}
